// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicLabel > should render correctly as not required label 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF iWRXAm"
    for="test-input-id"
  >
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render correctly as required label 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF iWRXAm"
    for="test-input-id"
  >
    <span>
      Test label
    </span>
    <abbr
      title="required"
    >
      *
    </abbr>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render correctly without text 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF iWRXAm"
    for="test-input-id"
  />
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render left icon 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF iWRXAm"
    for="test-input-id"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M328 112L184 256l144 144"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="48"
      />
    </svg>
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render right icon 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF iWRXAm"
    for="test-input-id"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M184 112l144 144-144 144"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="48"
      />
    </svg>
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;
